# crazyswarm2-adaptive

./: .gitignore  README.md  data_pwm_acc.mat  data_pwm_acc_2.mat  frames_2023-10-24_13.37.40.gv  log2118453250.csv  log313621015.csv  logs.npy
bag/rosbag2_2023_10_21-18_18_39/: metadata.yaml
config/: attirate_debug.xml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: attitude_debug_layout.xml  pid_debug_layout.xml
src/crazyswarm2/: .gitignore
src/crazyswarm2/crazyflie_examples/: setup.cfg
src/crazyswarm2/crazyflie_examples/crazyflie_examples/: L_poly.py  attirate_ctl.py  attitude_ctl.py  cf_tf_publisher.py  cfctl.py  cfctl_doa.py  cfctl_jax.py  cfctl_sysid.py  cmd_full_state.py  figure8.py  geom.py  hello_world.py  jaxenv.py  log.txt  multi_attitude_ctl.py  multi_trajectory.py  nice_hover.py  pid_controller.py  test_attirate.py  test_attirate_dattpid.py  test_figure8.py  util.py
src/crazyswarm2/crazyflie_examples/crazyflie_examples/data/: L_poly.csv  LeCAR_poly.csv  lecar_traj.ipynb  lecar_traj.npy
src/crazyswarm2/crazyflie_examples/crazyflie_examples/results/: data.csv
src/doa_experiment/: package.xml  setup.cfg  setup.py
utils/crazyflie-firmware-adaptive/: README.md
utils/minimum/: cf2_env.py  cf2_plan.py  cf2_sim.py  mbd_core.py
utils/redis_minimum/: cf2_env.py  cf2_plan.py  cf2_sim.py  listener.py  mbd_core.py  publisher.py
utils/scripts/: connect.py  covo-online-0.txt  covo-online-1.txt  covo-online-2.txt  covo-online-3.txt  covo_01.txt  log  (+18 more)
(+551 files in other folders)
