[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    attitude_ctl = crazyflie_examples.attitude_ctl:main
    attirate_ctl = crazyflie_examples.attirate_ctl:main
    multi_attitude_ctl = crazyflie_examples.multi_attitude_ctl:main
    cf_tf_publisher = crazyflie_examples.cf_tf_publisher:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
